# ha-fzj-weather

./: .gitignore  README.md  compose.yaml  hacs.json  pyproject.toml  test.py  tox.ini
custom_components/fzj_weather/: __init__.py  config_flow.py  manifest.json  sensor.py
custom_components/fzj_weather/translations/: en.json
src/fzj_weather/: weather.py
src/ha_fzj_weather/: __init__.py
src/ha_fzj_weather/parsing/: weather_metrics.py
tests/: __init__.py  data.html  test_version.py  test_weather.py
